<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Username"
        android:ems="10"
        android:id="@+id/usernameEditText"
        android:layout_above="@+id/passwordEditText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_marginBottom="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="Password"
        android:id="@+id/passwordEditText"
        android:imeActionId="@+id/edittext_action_login"
        android:imeActionLabel="@string/login"
        android:imeOptions="actionUnspecified"
        android:layout_marginBottom="39dp"
        android:layout_above="@+id/signInButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign In"
        android:id="@+id/signInButton"
        android:background="@drawable/my_button"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/WelcomeTitle"
        android:textColor="#8dbab3"
        android:textStyle="bold|italic"
        android:textSize="30sp"
        android:typeface="sans"
        android:text="@string/welcome_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/LoginWelcome"
        android:text="@string/login_welcome"
        android:textStyle="bold|italic"
        android:layout_below="@id/WelcomeTitle"
        android:layout_centerHorizontal="true" />

</RelativeLayout>